# glance

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/glance/: cli.py  server.py
src/glance/static/: app.js  index.html  style.css
static/: app.js  index.html  style.css
