[project]
name = "glance"
version = "0.2.0"
description = "Web-based file explorer for browsing repos — run `glance` in any directory"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Prem Viswanathan" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
glance = "glance.cli:main"

[project.urls]
Homepage = "https://github.com/prempv/glance"
Repository = "https://github.com/prempv/glance"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glance"]

[tool.hatch.build.targets.sdist]
include = ["src/glance", "README.md", "pyproject.toml"]
